# oldest-people-records-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  oldest-people-records.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  (+7 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  oldestpeoplerecords_sdk.py  oldestpeoplerecords_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  response.py  utility_type.py
py/entity/: oldest_ever_entity.py  oldest_living_entity.py
py/feature/: audit_feature.py  cache_feature.py  idempotency_feature.py  log_feature.py  proxy_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_netsim.py  test_oldest_ever_direct.py  test_oldest_ever_entity.py  test_oldest_living_direct.py  test_oldest_living_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_spec.py  param.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_params.py  prepare_query.py  register.py  result_basic.py  result_headers.py  transform_request.py  transform_response.py
(+430 files in other folders)
